--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -5482,7 +5482,7 @@ button.bg-light:focus {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-image: linear-gradient(#3c95ec, #1c7aef);
+	background-image: linear-gradient(gray, gray);
 	opacity: .85;
 }
 a.bg-dark:hover,
